fix material icons link and z-index in menu.scss

--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -8,7 +8,7 @@ header {
   .navbar {
     position: relative;
     background-color: #d8d8d8;
-    z-index: 2;
+    z-index: 102;
     height: 70px;
     display: flex;
     flex-direction: row;
@@ -110,7 +110,7 @@ header {
   nav {
     position: fixed;
     width: 0;
-    z-index: 2;
+    z-index: 102;
     overflow-x: hidden;
     background-color: #ffffff;
     height: calc(100vh - 70px);
@@ -143,7 +143,7 @@ header {
 
   .menu-shadow {
     position: fixed;
-    z-index: 1;
+    z-index: 101;
     top: 0;
     bottom: 0;
     right: 0;
